--- a/src/model/greetingFile.properties
+++ b/src/model/greetingFile.properties
@@ -1,5 +1,6 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-greeting=HOLAAAA
-parameter=text
+greeting=Hello world!
+#If text is written the application will show the greeting inm the console, if not it will show you the text on a window
+parameter=window
