--- a/src/model/greetingFile.properties
+++ b/src/model/greetingFile.properties
@@ -1,6 +1,7 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
+#The greeting string
 greeting=Hello world!
-#If text is written the application will show the greeting inm the console, if not it will show you the text on a window
+#If text is written the application will show the greeting in the console, if it is window written it will show the window, if not an error message will be show
 parameter=window
