--- a/src/model/greetingFile.properties
+++ b/src/model/greetingFile.properties
@@ -4,4 +4,5 @@
 #The greeting string
 greeting=Hello world!
 #If text is written the application will show the greeting in the console, if it is window written it will show the window, if not an error message will be show
-parameter=window
+parameter=text
+
